--- a/css/stile.css
+++ b/css/stile.css
@@ -1,4 +1,53 @@
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,600,700);
 /* VARIABLES */
 /* GENERAL STUFF */
+body {
+  font-family: 'Titillium Web', Verdana, sans-serif;
+  font-weight: 400; }
+
+p, span {
+  font-size: 1.2em;
+  text-align: justify; }
+
+/* -------- HEADER -------- */
+#logo img {
+  padding: 1em 0;
+  width: 60%;
+  height: auto; }
+
+#punchline {
+  font-size: 1.6em; }
+
+header nav {
+  margin-top: 2em; }
+header ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #404642; }
+  header ul li {
+    float: right; }
+    header ul li a {
+      display: block;
+      padding: 1em 2em;
+      color: #F2842D;
+      font-size: 1.3em;
+      font-weight: 600;
+      text-transform: uppercase; }
+    header ul li a:hover {
+      background-color: #f0ad4e;
+      color: white;
+      text-decoration: none; }
+
+/* -------- MAIN -------- */
+main .immagine {
+  background-color: red;
+  width: 100%;
+  height: 300px; }
+
+.servizio {
+  margin-bottom: 1em; }
+
+/* -------- FOOTER -------- */
 
 /*# sourceMappingURL=stile.css.map */
