--- a/css/stile.css
+++ b/css/stile.css
@@ -3,51 +3,129 @@
 /* GENERAL STUFF */
 body {
   font-family: 'Titillium Web', Verdana, sans-serif;
-  font-weight: 400; }
+  font-weight: 400;
+  background-image: url(../../img/bedge_grunge.png); }
 
 p, span {
   font-size: 1.2em;
   text-align: justify; }
 
+.principale {
+  background: #fff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3); }
+
+a.pulsante {
+  display: block;
+  background-color: #F2842D;
+  font-size: 1.7em;
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 1em 1em;
+  margin: 2em 0;
+  border-radius: 5px; }
+  a.pulsante:hover {
+    text-decoration: none; }
+  a.pulsante.preventivi {
+    width: 60%;
+    margin: 2em auto; }
+
 /* -------- HEADER -------- */
 #logo img {
   padding: 1em 0;
-  width: 60%;
+  width: 75%;
   height: auto; }
 
 #punchline {
   font-size: 1.6em; }
 
-header nav {
-  margin-top: 2em; }
-header ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background-color: #404642; }
-  header ul li {
-    float: right; }
-    header ul li a {
-      display: block;
-      padding: 1em 2em;
-      color: #F2842D;
-      font-size: 1.3em;
-      font-weight: 600;
-      text-transform: uppercase; }
-    header ul li a:hover {
-      background-color: #f0ad4e;
-      color: white;
-      text-decoration: none; }
+header {
+  padding: 2.5em 0; }
+  header nav {
+    margin-top: 2em; }
+  header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #404642; }
+    header ul li {
+      float: right; }
+      header ul li a {
+        display: block;
+        padding: 1em 1em;
+        color: #F2842D;
+        font-size: 1.3em;
+        font-weight: 600;
+        text-transform: uppercase; }
+      header ul li a:hover {
+        color: white;
+        text-decoration: none; }
+
+.hvr-shutter-out-vertical {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
+
+.hvr-shutter-out-vertical:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #f0ad4e;
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
+  -webkit-transform-origin: 50%;
+  transform-origin: 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out; }
+
+.hvr-shutter-out-vertical:hover, .hvr-shutter-out-vertical:focus, .hvr-shutter-out-vertical:active {
+  color: white; }
+
+.hvr-shutter-out-vertical:hover:before, .hvr-shutter-out-vertical:focus:before, .hvr-shutter-out-vertical:active:before {
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1); }
 
 /* -------- MAIN -------- */
 main .immagine {
-  background-color: red;
+  background-image: url(../../img/3832742169_a6cae03a41_z.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
-  height: 300px; }
+  height: 300px;
+  transition: all .2s ease-in-out; }
+main .immagine:hover {
+  transform: scale(1.02); }
 
 .servizio {
-  margin-bottom: 1em; }
+  margin-bottom: 2.5em;
+  margin-top: 2.5em; }
 
 /* -------- FOOTER -------- */
+footer {
+  padding: 2.5em 2em;
+  margin-top: 2em;
+  background-image: url(../../img/stardust.png);
+  color: white; }
+  footer h2 {
+    color: #FFF011; }
 
 /*# sourceMappingURL=stile.css.map */
