--- a/css/scss/stile.scss
+++ b/css/scss/stile.scss
@@ -6,6 +6,9 @@ $gialloAbacond: #FFF011;
 
 $images: "../img";
 
+$breakpoint-phone: 360px;
+$breakpoint-tablet: 768px;
+
 
 
 /* GENERAL STUFF */
@@ -80,7 +83,7 @@ header {
     background-color: #404642;
 
     li {
-      float: right;
+      float: left;
 
       a {
         display: block;
@@ -190,5 +193,17 @@ footer {
 
   h2 {
     color: $gialloAbacond;
+  }
+}
+
+/* MEDIA QUERIES */
+@media (max-width: $breakpoint-phone) {
+  header {
+    padding: 1em 0;
+    ul {
+      li {
+        width: 100%;
+      }
+    }
   }
 }
