--- a/css/scss/stile.scss
+++ b/css/scss/stile.scss
@@ -30,6 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 .principale {
   background: #fff;
   box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+  height: 100%;
 }
 
 a.pulsante, button.pulsante {
@@ -152,18 +153,30 @@ header {
 /* -------- MAIN -------- */
 main {
   .immagine {
-    background-image: url(#{$images}/3832742169_a6cae03a41_z.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    //background-image: url(#{$images}/3832742169_a6cae03a41_z.jpg);
+    //background-repeat: no-repeat;
+    //background-size: contain;
     width: 100%;
     height: 300px;
     transition: all .2s ease-in-out;
+
+    &:hover {
+      transform: scale(1.02);
+    }
+
+    &.numeroVerde {
+      background-image: url(#{$images}/3832742169_a6cae03a41_z.jpg);
+      background-repeat: no-repeat;
+    }
+
+    &.assemblee {
+      background-image: url(#{$images}/meeting.jpg);
+      background-repeat: no-repeat;
+      background-size: 100% auto;
+    }
   }
 
-  .immagine:hover {
-    transform: scale(1.02);
 
-  }
 
   #condominiForm {
     display: none;
