--- a/css/stile.css
+++ b/css/stile.css
@@ -12,7 +12,8 @@ p, span {
 
 .principale {
   background: #fff;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3); }
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+  height: 100%; }
 
 a.pulsante, button.pulsante {
   display: block;
@@ -106,14 +107,18 @@ header {
 
 /* -------- MAIN -------- */
 main .immagine {
-  background-image: url(../img/3832742169_a6cae03a41_z.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
   width: 100%;
   height: 300px;
   transition: all .2s ease-in-out; }
-main .immagine:hover {
-  transform: scale(1.02); }
+  main .immagine:hover {
+    transform: scale(1.02); }
+  main .immagine.numeroVerde {
+    background-image: url(../img/3832742169_a6cae03a41_z.jpg);
+    background-repeat: no-repeat; }
+  main .immagine.assemblee {
+    background-image: url(../img/meeting.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% auto; }
 main #condominiForm, main #fornitoriForm {
   display: none; }
 main .obbligatorio::after {
