--- a/css/scss/stile.scss
+++ b/css/scss/stile.scss
@@ -55,6 +55,49 @@ a.pulsante, button.pulsante {
   }
 }
 
+.spinner {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center;
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #333;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% {
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+    }
+}
+
+
 /* -------- HEADER -------- */
 #logo {
 
@@ -152,31 +195,47 @@ header {
 
 /* -------- MAIN -------- */
 main {
+
+  .col-sm-6 .immagine {
+    background-size: cover;
+    background-position: top center;
+  }
+
   .immagine {
-    //background-image: url(#{$images}/3832742169_a6cae03a41_z.jpg);
-    //background-repeat: no-repeat;
-    //background-size: contain;
-    width: 100%;
-    height: 300px;
+    //width: 100%;
+    height: 250px;
     transition: all .2s ease-in-out;
+    background-size: cover;
+    background-repeat: no-repeat;
 
     &:hover {
       transform: scale(1.02);
     }
 
     &.numeroVerde {
-      background-image: url(#{$images}/3832742169_a6cae03a41_z.jpg);
-      background-repeat: no-repeat;
+      background-image: url(#{$images}/numeroVerde.jpg);
+      //background-position: top right;
     }
 
     &.assemblee {
-      background-image: url(#{$images}/meeting.jpg);
-      background-repeat: no-repeat;
-      background-size: 100% auto;
+      background-image: url(#{$images}/assemblee.jpg);
+    }
+
+    &.manutenzioni {
+      background-image: url(#{$images}/manutenzioni.jpg);
+      background-size: contain;
+    }
+
+    &.archivio {
+      background-image: url(#{$images}/archivio.jpg);
+      background-size: 68% auto;
+      background-position: top center;
+    }
+
+    &.veracard {
+      background-image: url(#{$images}/veracard.png);
     }
   }
-
-
 
   #condominiForm {
     display: none;
