--- a/css/stile.css
+++ b/css/stile.css
@@ -32,6 +32,40 @@ a.pulsante, button.pulsante {
     width: 60%;
     margin: 2em auto; }
 
+.spinner {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center; }
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #333;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both; }
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s; }
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s; }
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1); } }
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1); } }
 /* -------- HEADER -------- */
 #logo img {
   padding: 1em 0;
@@ -106,19 +140,29 @@ header {
   transform: scaleY(1); }
 
 /* -------- MAIN -------- */
+main .col-sm-6 .immagine {
+  background-size: cover;
+  background-position: top center; }
 main .immagine {
-  width: 100%;
-  height: 300px;
-  transition: all .2s ease-in-out; }
+  height: 250px;
+  transition: all .2s ease-in-out;
+  background-size: cover;
+  background-repeat: no-repeat; }
   main .immagine:hover {
     transform: scale(1.02); }
   main .immagine.numeroVerde {
-    background-image: url(../img/3832742169_a6cae03a41_z.jpg);
-    background-repeat: no-repeat; }
+    background-image: url(../img/numeroVerde.jpg); }
   main .immagine.assemblee {
-    background-image: url(../img/meeting.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% auto; }
+    background-image: url(../img/assemblee.jpg); }
+  main .immagine.manutenzioni {
+    background-image: url(../img/manutenzioni.jpg);
+    background-size: contain; }
+  main .immagine.archivio {
+    background-image: url(../img/archivio.jpg);
+    background-size: 68% auto;
+    background-position: top center; }
+  main .immagine.veracard {
+    background-image: url(../img/veracard.png); }
 main #condominiForm, main #fornitoriForm {
   display: none; }
 main .obbligatorio::after {
