--- a/css/scss/stile.scss
+++ b/css/scss/stile.scss
@@ -312,6 +312,7 @@ footer {
       &.veracard {
         -webkit-background-size:100%;
         background-size:100%;
+        background-position: center center;
         height: 350px;
         background-color: #eeeeee;
       }
