--- a/css/scss/stile.scss
+++ b/css/scss/stile.scss
@@ -23,14 +23,14 @@ p, span {
   text-align: justify;
 }
 
-h1, h2, h3, h4, h5, h6 {
-
-}
-
 .principale {
   background: #fff;
   box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
   height: 100%;
+
+  // Override del container di Bootstrap
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 a.pulsante, button.pulsante {
