--- a/css/stile.css
+++ b/css/stile.css
@@ -6,6 +6,11 @@ body {
   font-weight: 400;
   background-image: url(../img/bedge_grunge.png); }
 
+h1, h2 {
+  display: inline-block;
+  border-bottom: 3px solid #F2842D;
+  padding-bottom: 5px; }
+
 h2 {
   font-size: 29px; }
 
@@ -165,7 +170,7 @@ main .col-sm-6 .immagine {
   background-position: top center;
   height: 365px; }
 main .immagine {
-  height: 250px;
+  height: 365px;
   transition: all .2s ease-in-out;
   -webkit-background-size: cover;
   background-size: cover;
@@ -250,7 +255,9 @@ footer {
       margin-bottom: 2em;
       padding: 2em 0;
       border-bottom: 1px dashed rgba(0, 0, 0, 0.2); } }
-@media (min-device-width: 768px) {
+@media (min-device-width: 360px) and (max-device-width: 768px) {
+  main #contattaci .link {
+    font-size: 2.5vw; }
   main .col-sm-6 .immagine {
     height: 330px;
     -webkit-background-size: cover;
