--- a/css/scss/stile.scss
+++ b/css/scss/stile.scss
@@ -68,7 +68,7 @@ a, button {
 }
 
 a.link {
-  color: $arancioneAbacond+60;
+  color: $arancioneAbacond+30;
   font-weight: 700;
   position: relative;
   display: inline-block;
@@ -227,6 +227,22 @@ header {
 /* -------- MAIN -------- */
 main {
 
+  span.verde {
+    font-weight: 700;
+    color: rgba(54, 163, 41, 0.98);
+  }
+
+  h2 {
+    a {
+      color: #333;
+
+      &:hover {
+        text-decoration: none;
+        color: $arancioneAbacond;
+      }
+    }
+  }
+
   .col-sm-6 {
     .immagine {
       -webkit-background-size:cover;
@@ -273,12 +289,22 @@ main {
 
     &.veracard {
       background-image: url(#{$images}/veracard.png);
+
+      display: block;
+      overflow:hidden;
+      text-indent:100%;
+      white-space:nowrap;
     }
 
     &.contatto {
       height:40vh;
       background-image: url(#{$images}/contatto.jpg);
       background-position: center center;
+
+      display: block;
+      overflow:hidden;
+      text-indent:100%;
+      white-space:nowrap;
     }
 
     &.collaboratori {
@@ -291,6 +317,11 @@ main {
       height:40vh;
       background-image: url(#{$images}/fornitori.jpg);
       background-position: right center;
+
+      display: block;
+      overflow:hidden;
+      text-indent:100%;
+      white-space:nowrap;
     }
   }
 
@@ -328,8 +359,30 @@ footer {
   background-image: url(#{$images}/stardust.png);
   color: white;
 
-  h2 {
-    color: $gialloAbacond;
+  a {
+    color: $arancioneAbacond;
+
+    &:hover {
+      color: $arancioneAbacond;
+      text-decoration: none;
+      border-bottom: 3px solid $arancioneAbacond;
+      padding-bottom: 3px;
+    }
+  }
+
+  h3 {
+    color: #fff;
+
+    a {
+      color: #fff;
+
+      &:hover {
+        color: $arancioneAbacond;
+        text-decoration: none;
+        border-bottom: 3px solid $arancioneAbacond;
+        padding-bottom: 3px;
+      }
+    }
   }
 
   &.row {
