--- a/css/scss/stile.scss
+++ b/css/scss/stile.scss
@@ -127,6 +127,12 @@ form {
   label.h4 {
     color: $arancioneAbacond;
   }
+
+  select {
+    //display: block;
+    padding: 0.3em;
+    width: 100%;
+  }
 }
 
 /* -------- HEADER -------- */
@@ -311,6 +317,11 @@ main {
       height:40vh;
       background-image: url(#{$images}/collaboratori.jpg);
       background-position: center center;
+
+      display: block;
+      overflow:hidden;
+      text-indent:100%;
+      white-space:nowrap;
     }
 
     &.fornitori {
