--- a/css/stile.css
+++ b/css/stile.css
@@ -134,9 +134,7 @@ header {
   backface-visibility: hidden;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
-  -webkit-transition-property: color;
   transition-property: color;
-  -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s; }
 
 .hvr-shutter-out-vertical:before {
@@ -152,11 +150,10 @@ header {
   transform: scaleY(0);
   -webkit-transform-origin: 50%;
   transform-origin: 50%;
-  -webkit-transition-property: transform;
+  transition-property: -webkit-transform;
   transition-property: transform;
-  -webkit-transition-duration: 0.3s;
+  transition-property: transform, -webkit-transform;
   transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out; }
 
 .hvr-shutter-out-vertical:hover, .hvr-shutter-out-vertical:focus, .hvr-shutter-out-vertical:active {
@@ -176,18 +173,17 @@ main h2 a {
     text-decoration: none;
     color: #F2842D; }
 main .col-sm-6 .immagine {
-  -webkit-background-size: cover;
   background-size: cover;
   background-position: top center;
   height: 365px; }
 main .immagine {
   height: 365px;
   transition: all .2s ease-in-out;
-  -webkit-background-size: cover;
   background-size: cover;
   background-repeat: no-repeat; }
   main .immagine:hover {
-    transform: scale(1.02); }
+    -webkit-transform: scale(1.02);
+            transform: scale(1.02); }
   main .immagine.numeroVerde {
     background-image: url(../img/numeroVerde.jpg);
     background-position: top right; }
@@ -272,7 +268,8 @@ footer {
   header {
     padding: 1em 0; }
     header nav {
-      margin: 0 auto; }
+      margin: 0 auto;
+      padding-top: 2.5em; }
     header ul li {
       width: 100%;
       float: left; }
@@ -293,7 +290,6 @@ footer {
   main .immagine.archivio {
     width: 100%; }
   main .immagine.veracard {
-    -webkit-background-size: 100%;
     background-size: 100%;
     background-position: center center;
     height: 350px;
@@ -316,15 +312,12 @@ footer {
     font-size: 2.5vw; }
   main .col-sm-6 .immagine {
     height: 330px;
-    -webkit-background-size: cover;
     background-size: cover; }
     main .col-sm-6 .immagine.veracard {
-      -webkit-background-size: 100%;
       background-size: 100%;
       background-position: center; }
   main .immagine {
     height: 330px;
-    -webkit-background-size: cover;
     background-size: cover; } }
 
 /*# sourceMappingURL=stile.css.map */
